# Comparative-evaluation-of-syscall-detection-mechanisms

./: .gitignore  README.md  Vagrantfile
afl_custom_mutators/config_creator/: create_config.py
afl_custom_mutators/weighted_input_mutator_experimental/: custom_mutator.ini  exprargs_transformed_input.txt  ls_args.txt  prep_environment.py  weighted_input_mutator.py
src/AFLandKLEEinstalldir/: AFL_install_z1.sh  KLEE_install_30September21.sh
src/audisp_plugins/: fuzzing_plugin.py  syscall_logger.py
src/customGLIBC/: custom_glibc_install.sh  libc-start.c
src/fileFinder/: AudispPlugin.conf  AudispPlugin.cpp  AuditInformations.h  AuditctlFunctions.cpp  AuditctlFunctions.h  AuparseFunctions.cpp  AuparseFunctions.h  CMakeLists.txt  LogEvaluation.cpp  PluginEvaluation.cpp  cmake_install.cmake  installConfigFile.py
src/fileFinder/CMakeModules/: FindAuparse.cmake  FindLibaudit.cmake
src/syscall_finder_plugin/: audisp-plugin.c
src/syscall_finder_plugin/syscall_finder_config/: sbp.conf
synced_folder/: .gitignore
vagrant/: bootstrap.sh
vagrant/provisioning/: analyze_3_examples.yml  analyze_binary.sh  change_appToProperties.py  change_appToProperties.sh  cleanup.sh  compile_3_examples.yml  copy_results.sh  download-and-build-fix.sh  install_examples.yml  install_sysfilter_tempSpecial_chestnut.yml  inventory  klee_installation.yml  master_playbook.yml  parse-out-temporal-specialization.py  run_command.sh  test.yml
